# freminal

./: .dictionary.txt  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile.toml  README.md  SGR.md  SUPPORTED_CONTROL_CODES.md  TODO.md  build.rs  clear_logs.sh  codecov.yml  config_example.toml  cross_building.txt  deny.toml  direnv.MD  flake.nix  freminal_phase7d.patch  osc_test.sh  profile_mac.sh  profile_samply.sh  run_tests_with_output.sh  sequence_decoder.py  shell.nix  shell_echo.sh  string_buffer_viewer.py  sync_repo.sh  typos.toml  utf8.py
.github/workflows/: check_and_lint.yaml  ci.yml  deploy.yaml  test.yml
Documents/: ESCAPE_SEQUENCE_COVERAGE.md  ESCAPE_SEQUENCE_GAPS.m d  SGR.md  SUPPORTED_CONTROL_CODES.md  TODO.md
filedescriptor/: Cargo.toml  README.md
filedescriptor/src/: lib.rs  unix.rs
freminal/: Cargo.toml
freminal-buffer/: Cargo.toml
freminal-buffer/src/: buffer.rs  cell.rs  lib.rs  row.rs
freminal-buffer/tests/: buffer_tests.rs  row_tests.rs
freminal-common/: Cargo.toml  buildback.rs
freminal-common/src/: args.rs  colors.rs  config.rs  cursor.rs  lib.rs  scroll.rs  terminal_size.rs  terminfo.rs  window_manipulation.rs
freminal-common/src/buffer_states/: format_tag.rs  mod.rs  tchar.rs
freminal-common/tests/: arg_tests.rs  args.rs  color_tests.proptest-regressions  color_tests.rs  colors.rs  cursor.rs  cursor_visual_style_tests.rs  scroll.rs  scroll_direction_tests.rs  window_manipulation.rs  window_manipulation_tests.rs
freminal-grid/: Cargo.toml
freminal-grid/src/: cursor.rs  grid.rs  lib.rs  line.rs
freminal-terminal-emulator/: Cargo.toml  build.rs
freminal-terminal-emulator/benches/: buffer_benches.rs
freminal-terminal-emulator/src/: ansi.rs  error.rs  format_tracker.rs  interface.rs  lib.rs  playback.rs
freminal-terminal-emulator/src/ansi_components/: csi.rs  line_draw.rs  mod.rs  mode.rs  osc.rs  sgr.rs  standard.rs  tracer.rs
freminal-terminal-emulator/src/ansi_components/csi_commands/: cha.rs  cub.rs  cud.rs  cuf.rs  cup.rs  cuu.rs  dch.rs  decrqm.rs  decscusr.rs  decslpp.rs  decstbm.rs  ech.rs  ed.rs  el.rs  ict.rs  il.rs  mod.rs  report_xt_version.rs  send_device_attributes.rs  sgr.rs
freminal-terminal-emulator/src/ansi_components/modes/: allow_column_mode_switch.rs  decarm.rs  decawm.rs  decckm.rs  deccolm.rs  decom.rs  decsclm.rs  decscnm.rs  dectcem.rs  grapheme.rs  lnm.rs  mod.rs  mouse.rs  reverse_wrap_around.rs  rl_bracket.rs  srm.rs  sync_updates.rs  theme.rs  unknown.rs  xtcblink.rs  xtextscrn.rs  xtmsewin.rs  xtmsex11.rs
freminal-terminal-emulator/src/io/: dummy.rs  mod.rs  pty.rs
freminal-terminal-emulator/src/state/: buffer.rs  cursor.rs  data.rs  internal.rs  mod.rs  term_char.rs
freminal-terminal-emulator/tests/: ansi.rs  ansi_parser_inner_csi_finished_set_cursor_position_g.rs  ansi_prop.rs  ansi_recovery.rs  ansi_recovery_tracer.rs  ansi_tests.rs  buffer.rs  cha_parser_unit.rs  csi_commands.rs  csi_commands_cub_cuu_dch.rs  csi_commands_decrqm_decscusr.rs  csi_commands_decslpp.rs  csi_commands_decstbm.rs  csi_commands_ed_el.rs  csi_commands_exhaustive.rs  csi_commands_report_xt_version.rs  csi_commands_unit.rs  csi_unit.rs  cursor.rs  decawm_wrapping.rs  format_tracker.rs  integration_all.rs  integration_csi.rs  integration_invalid.rs  integration_osc.rs  internal.rs  line_draw_unit.rs  mode_core.rs  mode_unit.rs  modes.rs  modes_decawm.rs  modes_decckm.rs  modes_deccolm.rs  modes_decom.rs  modes_dectcem.rs  modes_dispatcher.rs  modes_dispatcher_invalid.rs  modes_enable_disable.rs  modes_exhaustive.rs  modes_helpers.rs  (+22 more)
freminal/benches/: render_loop_bench.rs
freminal/src/: lib.rs  main.rs
freminal/src/gui/: colors.rs  fonts.rs  mod.rs  mouse.rs  render_state.rs  terminal.rs
freminal/src/terminal_emulator/: ansi.rs  error.rs  format_tracker.rs  interface.rs  playback.rs
freminal/src/terminal_emulator/ansi_components/: mod.rs  sgr.rs
freminal/src/terminal_emulator/ansi_components/csi_commands/: cub.rs  cud.rs  cuu.rs  dch.rs  el.rs  il.rs  mod.rs
freminal/src/terminal_emulator/io/: mod.rs  pty.rs
freminal/src/terminal_emulator/state/: buffer.rs  cursor.rs  internal.rs  term_char.rs
freminal/tests/: ansi.rs  buffer.rs  csi_commands.rs  format_tracker.rs  terminal_emulator.rs
portable-pty/: Cargo.toml
portable-pty/examples/: narrow.rs  whoami.rs
portable-pty/src/: cmdbuilder.rs  lib.rs
portable-pty/src/win/: conpty.rs
res/: freminal.ti  terminfo.tar
res/terminfo/78/: xterm-freminal
speed_tests/: 1500_lines.txt  2000_lines.txt  random_crap.py  random_crap.txt
src/: error.rs  lib.rs  log.rs  main.rs
src/gui/: colors.rs  fonts.rs  mod.rs  terminal.rs
src/terminal_emulator/: ansi.rs  buffer.rs  error.rs  format_tracker.rs  mod.rs  playback.rs  recording.rs  replay.rs  term_char.rs
src/terminal_emulator/ansi_components/: csi.rs  mode.rs  osc.rs  sgr.rs
src/terminal_emulator/ansi_components/csi_commands/: cha.rs  cub.rs  cud.rs  cuf.rs  cup.rs  cuu.rs  dch.rs  ed.rs  el.rs  ict.rs  il.rs  mod.rs  sgr.rs
src/terminal_emulator/io/: mod.rs  pty.rs
src/terminal_emulator/state/: buffer.rs  cursor.rs  data.rs  fonts.rs  internal.rs  term_char.rs
terminal-emulator/: Cargo.toml
terminal-emulator/src/: ansi.rs  format_tracker.rs  interface.rs  lib.rs  playback.rs
terminal-emulator/src/ansi_components/: csi.rs  mod.rs  mode.rs  osc.rs
terminal-emulator/src/ansi_components/csi_commands/: cub.rs  cud.rs  cuu.rs  el.rs  ict.rs  sgr.rs
terminal-emulator/src/ansi_components/modes/: decawm.rs  decckm.rs  dectcem.rs  rl_bracket.rs  xtextscrn.rs  xtmsewin.rs  xtmsex11.rs
terminal-emulator/src/io/: pty.rs
terminal-emulator/src/state/: buffer.rs  cursor.rs  internal.rs  term_char.rs
terminal-emulator/tests/: ansi.rs  buffer.rs  csi_commands.rs  cursor.rs  format_tracker.rs  internal.rs  term_char.rs  terminal_emulator.rs
tests/: ansi.rs  args.rs  csi.rs  term_char.rs  terminal_emulator.rs
xtask/: Cargo.toml
xtask/src/: main.rs
