[workspace]
members = ["freminal", "freminal-common", "freminal-terminal-emulator", "xtask"]
default-members = ["freminal", "freminal-common", "freminal-terminal-emulator"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Fred Clausen"]
license = "MIT"
description = "A terminal emulator written in Rust"
repository = "https://github.com/fredclausen/freminal"
documentation = "https://github.com/fred/freminal/README.md"
homepage = "https://github.com/fredclausen/freminal"
readme = "README.md"
rust-version = "1.82.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.93"
cargo_metadata = "0.19.0"
clap = { version = "4.5.21", features = ["derive"] }
clap-cargo = { version = "0.14.1", features = ["cargo_metadata"] }
clap-verbosity-flag = "3.0.0"
color-eyre = "0.6.3"
conv = "0.3.3"
criterion = "0.5.1"
crossbeam-channel = "0.5.13"
duct = "0.13.7"
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
egui = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
    "persistence",
    "log",
] }
parking_lot = "0.12.3"
portable-pty = "0.8.1"
tar = "0.4.43"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
] }
unicode-segmentation = "1.12.0"
