[workspace]
members = [
  "filedescriptor",
  "freminal",
  "freminal-common",
  "freminal-terminal-emulator",
  "portable-pty",
  "xtask",
]
default-members = [
  "filedescriptor",
  "freminal",
  "freminal-common",
  "freminal-terminal-emulator",
  "portable-pty",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Fred Clausen"]
license = "MIT"
description = "A terminal emulator written in Rust"
repository = "https://github.com/fredclausen/freminal"
documentation = "https://github.com/fred/freminal/README.md"
homepage = "https://github.com/fredclausen/freminal"
readme = "README.md"
rust-version = "1.82.0"
version = "0.1.0"


[workspace.dependencies]
anyhow = "1.0.95"
cargo_metadata = "0.19.1"
clap = { version = "4.5.27", features = ["derive"] }
clap-cargo = { version = "0.15.2", features = ["cargo_metadata"] }
clap-verbosity-flag = "3.0.2"
color-eyre = "0.6.3"
conv = "0.3.3"
criterion = "0.5.1"
crossbeam-channel = "0.5.14"
duct = "0.13.7"
eframe = { version = "0.30.0", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
  "wayland",
  "x11",
] }
egui = { version = "0.30.0", default-features = false, features = [
  "default_fonts",
  "persistence",
  "log",
] }
parking_lot = "0.12.3"
# portable-pty = "0.8.1"
tar = "0.4.43"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "parking_lot",
] }
unicode-segmentation = "1.12.0"
test-log = { version = "0.2.17", features = ["trace"] }
tempfile = "3.15.0"

# added for portable pty
downcast-rs = "2.0.1"
log = "0.4.25"
libc = "0.2.169"
nix = { version = "0.29.0", features = ["term", "fs"] }
shell-words = "1.1.0"
# serde_derive = "1.0.217"
# serde = "1.0.217"
serial2 = "0.2.28"
# added for portable pty windows
bitflags = "2.8.0"
lazy_static = "1.5.0"
shared_library = "0.1.9"
winapi = { version = "0.3.9", features = [
  "winuser",
  "consoleapi",
  "handleapi",
  "fileapi",
  "namedpipeapi",
  "synchapi",
  "processthreadsapi",
  "winsock2",
  "processenv",
] }
winreg = "0.55.0"
# added for portable pty dev
smol = "2.0.2"
futures = "0.3.31"
