[package]
name = "freminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe.workspace = true
conv.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
terminal_emulator = { path = "../terminal-emulator" }
freminal-common = { path = "../freminal-common" }

[build-dependencies]
tar.workspace = true

[features]
default = []
validation = []
