[package]
name = "freminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.bundle]
name = "Freminal"
identifier = "com.fredclausen.freminal"
copyright = "Copyright (c) 2024-2025 Fred Clausen"
category = "Developer Tools"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe.workspace = true
egui.workspace = true
conv2.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
freminal-terminal-emulator = { path = "../freminal-terminal-emulator" }
freminal-common = { path = "../freminal-common" }

# dev dependencies
[dev-dependencies]
criterion.workspace = true

[features]
default = []
validation = []

[[bench]]
name = "render_loop_bench"
harness = false
