[package]
name = "portable-pty"
version = "0.9.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Cross platform pty interface"
license = "MIT"
documentation = "https://docs.rs/portable-pty"

[dependencies]
anyhow.workspace = true
downcast-rs.workspace = true
filedescriptor = { version = "0.8", path = "../filedescriptor" }
log.workspace = true
libc.workspace = true
nix.workspace = true
shell-words.workspace = true
serial2.workspace = true

[features]
default = []

[target."cfg(windows)".dependencies]
bitflags.workspace = true
lazy_static.workspace = true
shared_library.workspace = true
winapi.workspace = true
winreg.workspace = true

[dev-dependencies]
smol.workspace = true
futures.workspace = true
